# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: general.yaml
migrations/: 20211108222217_add_status_to_subscriptions.sql  20211108222727_make_status_not_null_in_subscriptions.sql  20211108223517_create_subscription_tokens_table.sql  20211129175306_create_users_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
