[package]
name = "zero2prod"
version = "0.1.0"
authors = ["prabodhkakodkar <prabodhkakodkar@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "=3.0.0-beta.10"
actix-web = "=4.0.0-beta.9"

config = "0.11.0"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9.0"
log = "0.4.14"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11.4"
tokio = "1"
